# MetaNamesContract-Rust

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  build-contract.yml  code-quality.yml  main.yml  pull_request.yml  test.yml  wasm-check.yml
.github/workflows/actions/: audit.yml  test.yml
access-control/: Cargo.toml  README.md
access-control/src/: actions.rs  error.rs  msg.rs  state.rs  tests.rs
airdrop/: Cargo.toml
airdrop/src/: actions.rs  lib.rs  state.rs  tests.rs
contract/: Cargo.toml
contract-proxy/: Cargo.toml  README.md
contract-proxy/src/: lib.rs
contract-version-base/: Cargo.toml
contract-version-base/src/: state.rs
contract-voting/: Cargo.toml  README.md
contract-voting/src/: lib.rs
contract/benches/: contract_benchmark.rs
contract/src/: actions.rs  contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
contract/tests/: contract.rs  cucumber.rs
contract/tests/features/: admin.feature  airdrop.feature  config.feature  mint.feature  renew.feature  transfer.feature  user-roles.feature
mpc721-base/: Cargo.toml  README.md
mpc721-base/src/: actions.rs  msg.rs  state.rs  tests.rs
mpc721-hierarchy/: Cargo.toml
mpc721-hierarchy/src/: actions.rs  error.rs  state.rs  tests.rs
nft/: Cargo.toml  README.md
nft/src/: actions.rs  error.rs  msg.rs  state.rs  tests.rs
partisia-name-system/: Cargo.toml  README.md  tests.md
partisia-name-system/src/: actions.rs  error.rs  msg.rs  state.rs  tests.rs
partisia-name-system/tests/: cucumber.rs
partisia-name-system/tests/features/: domain.feature  record.feature
rpc-msg-derive/: Cargo.toml
src/: contract.rs  lib.rs  state.rs  tests.rs
src/partisia-name-system/: Cargo.toml  README.md
src/partisia-name-system/src/: actions.rs  error.rs  msg.rs  state.rs  tests.rs
utils/: Cargo.toml
utils/src/: contract_deployer.rs  decimal.rs  events.rs  lib.rs  merkle.rs  tests.rs  time.rs  zk_contract_deployer.rs
