[workspace]
resolver = "2"

members = [
  "contract",
  "contract-proxy",
  "contract-version-base",
  "access-control",
  "nft",
  "partisia-name-system",
  "rpc-msg-derive",
  "utils",
]

[workspace.metadata.partisiablockchain]
cargo-partisia = "4.8.0"

[workspace.dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", tag = "v.16.40.0" }

cucumber = "0.19"
futures = "0.3"

serde_json = "1.0"
thiserror = "1.0.31"
