[package]
name = "contract-voting"
readme = "README.md"
version = "1.1.0"
authors = ["Yeboster"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }

contract-version-base = { path = "../contract-version-base" }

[features]
abi = [
  "pbc_contract_common/abi",
  "pbc_contract_codegen/abi",
  "pbc_traits/abi",
  "create_type_spec_derive/abi",
  "contract-version-base/abi",
]
