[package]
name = "meta-names-contract"
version = "0.0.1"
authors = ["Yeboster"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.partisiablockchain]
cargo-partisia = "0.2.16"

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }

partisia-name-system = { path = "../partisia-name-system" }
contract-version-base = { path = "../contract-version-base" }

serde_json = { workspace = true }

[dev-dependencies]
utils = { path = "../utils" }

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "partisia-name-system/abi", "contract-version-base/abi", "utils/abi"]

