[package]
name = "partisia-name-system"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.partisiablockchain]
cargo-partisia = "0.2.9"

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }

utils = { path = "../utils" }
mpc721-hierarchy = { path = "../mpc721-hierarchy" }
contract-version-base = { path = "../contract-version-base"}
rpc-msg-derive = { path = "../rpc-msg-derive" }

serde_json = "1.0"
thiserror = "1.0.31"

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "mpc721-hierarchy/abi", "create_type_spec_derive/abi", "contract-version-base/abi", "utils/abi"]
