[package]
name = "partisia-name-system"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }

utils = { path = "../utils" }
contract-version-base = { path = "../contract-version-base" }
rpc-msg-derive = { path = "../rpc-msg-derive" }

serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
futures = { workspace = true }
utils = { path = "../utils" }

[features]
abi = [
  "pbc_contract_common/abi",
  "pbc_contract_codegen/abi",
  "pbc_traits/abi",
  "create_type_spec_derive/abi",
  "contract-version-base/abi",
  "utils/abi",
]

[[test]]
name = "cucumber"
harness = false
