[package]
name = "rpc-msg-derive"
version = "1.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
pbc_contract_common = { workspace = true }
pbc_contract_codegen = { workspace = true }
pbc_traits = { workspace = true }
pbc_lib = { workspace = true }
read_write_rpc_derive = { workspace = true }
read_write_state_derive = { workspace = true }
create_type_spec_derive = { workspace = true }

darling = "0.14.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi"]
